@@ -36,7 +36,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 22 Dec 2008: <a href="/about.html#CHANGES">You can now edit airports that you added yourself.</a>
+	      <B>News</b>: 23 Dec 2008: <a href="/about.html#CHANGES">Fixes to CSV importing, specification v0.3 released.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
